...
          color: Colors.grey[100], borderRadius: BorderRadius.circular(15)),
      child: TextField(
          controller: _searchController,
          onTapOutside: (_) => FocusScope.of(context).unfocus(),
          decoration: InputDecoration(
              prefixIcon: Icon(Icons.search, color: Colors.pink),
              hintText: '관심있는 사람 찾기',
              border: InputBorder.none,
              contentPadding: EdgeInsets.symmetric(vertical: 15))),
    );
  }

  Widget _buildMatchCard(MatchModel match) {
...
