...
          decoration: WidgetStyle.greyTextFieldDecoration(),
          padding: EdgeInsets.symmetric(horizontal: 16, vertical: 4),
          child: TextField(
              key: Key("chatTextField"),
              controller: _textEditingController,
              decoration: InputDecoration(
                hintText: "메시지 입력..",
                hintStyle: AppStyle.generalMediumSubBody(),
                border: InputBorder.none,
                isDense: true,
                contentPadding: EdgeInsets.symmetric(vertical: 10),
              ),
              minLines: 1,
...
